workspace = { members = [ "consensus","logger", "protocol", "smart_contract"] }
[package]
name = "rubic"
version = "0.2.0"
edition = "2021"
authors = ["Matthew Darnell"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rocket = "0.5.0-rc.3"
spmc = "0.3.0"
api = { path = './api' }
crypto =  { path = './crypto' }
protocol = { path = './protocol' }
logger = { path = './logger' }
network = { path = './network' }
smart_contract = { path = './smart_contract' }
store = { path = './store' }
hex = "0.4.3"
base64 = "0.21.7"

[profile.test]  # Disable Overflow Checks For FourQ Operations
overflow-checks = false

[profile.dev]
overflow-checks = false
