[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { path = "../consensus" }
crypto = { path = '../crypto' }
identity = { path = '../identity' }
logger = { path = '../logger' }
store = { path = '../store'}
uuid = { version = "1.17.0", features = ["v4"] }