[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
bcrypt = "0.15.0"
libc = "0.2.147"
sodiumoxide = "0.2.7"

[build-dependencies]
cc = "1.0.79"