[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.6.0-rc.0"
base64 = "0.22.1"
chacha20poly1305 = "0.11.0-rc.0"
hex = "0.4.3"
password-hash = "0.6.0-rc.1"
pbkdf2 = "0.13.0-rc.0"
rand = "0.9.2"
sha2 = "0.11.0-rc.0"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["k12"]}
logger = { path = '../logger' }


[features]
random = []
hash = []
encryption = ["hash"]