[package]
name = "identity"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
crypto = { path = '../crypto', features = ["encryption"] }
logger = { path = '../logger' }

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.79"
