[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
crypto = { path = '../crypto', features=["random"] }
tokio = { version = "1.30.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }