[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.26"
futures = "0.3.28"
rand = "0.8.5"
api = { path = '../api' }
crypto = { path = '../crypto', features=["encryption", "random"] }
spmc = "0.3.0"
uuid = { version = "1.4.1", features = ["v4"] }