[package]
name = "rubicui"
version = "1.0.0"
edition = "2021"
authors = ["Matthew Darnell"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rocket = "0.5.0-rc.3"
spmc = "0.3.0"
rubic = { path = "../" }
tauri = { version = "2", features = [ "devtools"] }
tokio = { version = "1.28", features = ["full"] }

hex = "0.4.3"
base64 = "0.21.7"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.test]  # Disable Overflow Checks For FourQ Operations
overflow-checks = false

[profile.dev]
overflow-checks = false
