[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serial_test = "2.0.0"
sqlite = "0.31.0"
identity = { path = '../identity' }